--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,33 @@
 body
 {
+    background-image: linear-gradient(115deg, rgb(255, 127, 80, 0.7), rgba(136, 136, 206, 0.7)), url(https://i0.wp.com/www.unitedgamers.gg/wp-content/uploads/2022/04/Origin-Impressions.jpg?w=1920&ssl=1);
+    background-color: rgb(255, 127, 80, 0.7);
+    background-size: cover;
+    margin: 0;
+    width: 100%;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 2rem;
+    color: f3f3f3;
+    font-weight: bolder;
+}
+
+h1 
+{
     text-align: center;
+    margin: 1em auto;
+    font-style:oblique;
+}
+
+#div1 
+{
+    text-align: center;
+    max-width: 850px;
+    min-width: 350px;
+    margin: 30 auto;
+    background-color: rgb(255, 127, 80, 0.95);
+    padding: 20px 20px;
+    font-size: 1.25rem;
+    border-radius: 90px;
+    border-color: rgb(44, 80, 169);
+    border-style: dashed;
 }
